--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,7 @@ wpi.java.debugJni = false
 // Set this to true to enable desktop support.
 def includeDesktopSupport = true
 
-repositories {
-  maven { url 'https://jitpack.io' }
+repositories {  maven { url 'https://jitpack.io' }
 }
 
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
